@@ -2,6 +2,11 @@ Revelation changelog
 
 ---------------[ xxxx-xx-xx : 0.3.1 ]---------------
 
+2004-07-08  Erik Grinaker <erikg@codepoet.no>
+
+	* the OK button in the password dialogs is inactive when it's
+	missing input
+
 2004-06-30  Erik Grinaker <erikg@codepoet.no>
 
 	* file-selectors and the about dialog are set as transients
